# todo-fast

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
src/: crud.py  db.py  main.py  models.py  routers.py  schemas.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 5264c4bd1fe9_added_user_table.py  767378f84827_added_password_field.py  7f3624f5e3f8_added_deleted_column.py  9aae8e445c09_update_task_table.py  c198d71fc338_updated_password_type.py  e1a1c31e81d8_create_task_table.py  f2ec82676969_added_is_active_column.py
src/crud/: task.py  user.py
src/routers/: task.py  user.py
src/schemas/: tasks.py  users.py
tests/: conftest.py  test_main.py  test_task.py  test_user.py  test_utils.py
