[project]
name = "todo-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.2",
    "sqlalchemy-libsql>=0.1.0",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
