[project]
name = "todo-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.3",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "freezegun>=1.5.1",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.coverage.run]
omit = [
    "src/db.py",
]

[tool.black]
force-exclude = [
    "src/alembic/",
    "alembic.ini"
]

[tool.ruff]
lint.ignore = ["E712"]
